--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,7 @@ dependencies {
 
     //COIL
     implementation("io.coil-kt:coil-compose:1.4.0")
+
+    //PAGING
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha14'
 }
