--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     //COIL
     implementation("io.coil-kt:coil-compose:1.4.0")
 
-    //PAGING
+    //PAGINATION
     implementation 'androidx.paging:paging-compose:1.0.0-alpha14'
+
+    //VIEWPAGE
+    implementation "com.google.accompanist:accompanist-pager:0.24.2-alpha"
 }
